# chat2obs

./: .env.example  .gitignore  DATABASE_ARCHITECTURE.md  README.md  SUMMARY  VESTIGIAL_CLEANUP_SUMMARY.md  docker-compose.yml  notes.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
SUMMARIES/: PYTHON.md
attic/: Makefile  SUMMARY  setup.py
data/exports/: conversations.json
data/notes/: hello! can you help me write a python function.md
docs/: SUMMARY  annotators.md  architecture.md  builders.md  claude.schema.json  cli.md  extractors.md  index.md  models.md  schema.md  testing.md
examples/: incremental_processing_example.py  legacy_processing_example.py
github/workflows/: SUMMARY
llm_archive/: SUMMARY  __init__.py  cli.py  cli_cursors.py  config.py  db.py
llm_archive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_archive/annotations/: SUMMARY  __init__.py  core.py  cursor.py
llm_archive/annotators/: SUMMARY  __init__.py  base.py  chatgpt.py  content_part.py  dialogue.py  exchange.py  features.py  message.py  prompt_response.py
llm_archive/builders/: SUMMARY  __init__.py  chunks.py  exchanges.py  hashes.py  prompt_response.py  trees.py
llm_archive/extractors/: SUMMARY  __init__.py  base.py  chatgpt.py  claude.py
llm_archive/labelers/: __init__.py  base.py  features.py
llm_archive/models/: SUMMARY  __init__.py  derived.py  raw.py
nbs/: Timeline_in_Cosmograph_Widget_⏳.ipynb  dev.ipynb  sandbox.ipynb
queries/: wiki_candidates_without_titles.sql
schema/: 001_raw.sql  002_derived.sql  003_views.sql  004_pipline_runs.sql  004_prompt_responses.sql  005_annotations.sql  005_message_chunks.sql  005_prompt_response_views.sql  006_annotations.sql  006_prompt_response_views.sql  006_views_chunks.sql  007_prompt_response_views.sql  008_annotation_views.sql
src/conversation_tagger/: Makefile  SUMMARY  __init__.py  factory.py  setup.py
src/conversation_tagger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: SUMMARY  __init__.py  conftest.py  test_cli.py  test_extractors.py  test_models.py  test_simplified.py
tests/conversation_tagger/: SUMMARY  conftest.py  test_basic.py  test_basic_working.py  test_cli_discovery.py  test_cli_main.py  test_conversation_tagging.py  test_core.py  test_data_config.py  test_data_loaders.py  test_data_validation.py  test_detection.py  test_integration.py  test_parameterized.py  test_processing_filters.py  test_processing_pipeline.py  test_tagging.py
tests/integration/: SUMMARY  conftest.py  test_annotations.py  test_annotators.py  test_builders.py  test_chunk_builder.py  test_extraction_diagnostics.py  test_extractors.py  test_idempotency.py  test_models.py  test_prompt_response_builder.py
tests/unit/: SUMMARY  __init__.py  conftest.py  test_annotation_utils.py  test_annotations.py  test_cli.py  (+11 more)
(+54 files in other folders)
