# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_archive"
version = "0.1.0"
description = "LLM conversation archive ingestion and analysis"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "loguru>=0.7",
    "fire>=0.7.1",
    "python-dotenv>=1.2.1",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
llm-archive = "llm_archive.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_archive"]
exclude = ["data"]
